--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
 }
 
+test {
+    useJUnitPlatform()
+}
+
 // Define the main class for the application
 mainClassName = 'C3'
 
