--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+
+    compile 'javax.mail:javax.mail-api:1.5.5'
+
+    compile group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
+
 }
 
 application {
